Fix contributor avatar spacing in RTL

--- a/kitsune/sumo/static/sumo/scss/components/_avatar-group.scss
+++ b/kitsune/sumo/static/sumo/scss/components/_avatar-group.scss
@@ -81,7 +81,7 @@
       text-decoration: none;
 
       img {
-        margin-right: 12px;
+        margin-inline-end: 12px;
         width: 48px;
       }
     }
